; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/linux_x86/extr_37384.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/linux_x86/extr_37384.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@shellcode = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32 (...)*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = load i64, i64* @shellcode, align 8
  %8 = inttoptr i64 %7 to i32 (...)*
  store i32 (...)* %8, i32 (...)** %6, align 8
  %9 = load i32 (...)*, i32 (...)** %6, align 8
  %10 = call i32 (...) %9()
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
